Build fix for xen domu + PCI, from Juho Salminen in PR 44083.